practica3/src/y.output
Estado 88 conflictos: 1 desplazamiento/reducción
Estado 141 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: cabecera_programa bloque

    2 cabecera_programa: PRINCIPAL PARIZQ PARDER

    3 bloque: LLAVEIZQ declar_de_variables_locales declar_proced sentencias LLAVEDER

    4 lista_parametros: lista_parametros COMA parametro
    5                 | parametro

    6 lista_para_por_defecto: lista_para_por_defecto COMA parametro IGUAL CONSTANTE
    7                       | parametro IGUAL CONSTANTE
    8                       | lista_para_por_defecto COMA parametro IGUAL agregado_lista
    9                       | parametro IGUAL agregado_lista

   10 parametro: tipos ID

   11 declar_de_variables_locales: INICIOVAR variables_locales FINVAR
   12                            | %empty

   13 variables_locales: variables_locales cuerpo_declar_variables
   14                  | cuerpo_declar_variables

   15 cuerpo_declar_variables: tipos declar_variables PYC

   16 declar_variables: ID
   17                 | ID IGUAL expresion
   18                 | declar_variables COMA ID
   19                 | declar_variables COMA ID IGUAL expresion

   20 declar_proced: cabecera_proced bloque
   21              | %empty

   22 cabecera_proced: PROCEDIMIENTO ID PARIZQ lista_parametros COMA lista_para_por_defecto PARDER
   23                | PROCEDIMIENTO ID PARIZQ lista_parametros PARDER
   24                | PROCEDIMIENTO ID PARIZQ PARDER

   25 sentencias: secu_sentencia
   26           | %empty

   27 secu_sentencia: secu_sentencia sentencia
   28               | sentencia

   29 sentencia: bloque
   30          | sentencia_asignacion
   31          | sentencia_if
   32          | MIENTRAS PARIZQ expresion PARDER sentencia
   33          | PARA sentencia_asignacion HASTA expresion ITERANDO expresion HACER sentencia
   34          | LEER lista_identificadores PYC
   35          | IMPRIMIR mensajes PYC
   36          | llamada_proced
   37          | expresion MOV_LISTA PYC
   38          | DOLLAR expresion PYC

   39 sentencia_asignacion: ID IGUAL expresion PYC

   40 sentencia_if: SI PARIZQ expresion PARDER sentencia
   41             | SI PARIZQ expresion PARDER sentencia OTROCASO sentencia

   42 lista_identificadores: lista_identificadores COMA ID
   43                      | ID

   44 mensajes: mensajes COMA mensaje
   45         | mensaje

   46 mensaje: expresion
   47        | CADENA

   48 llamada_proced: ID PARIZQ lista_expresiones PARDER PYC
   49               | ID PARIZQ PARDER PYC

   50 lista_expresiones: lista_expresiones COMA expresion
   51                  | expresion

   52 expresion: PARIZQ expresion PARDER
   53          | DECRE_PRE expresion
   54          | INCRE_PRE expresion
   55          | NOT expresion
   56          | UNARIO_PRE_LISTA expresion
   57          | ADITIVOS expresion
   58          | expresion DECRE_PRE
   59          | expresion INCRE_PRE
   60          | expresion ADITIVOS expresion
   61          | expresion DECRE_PRE expresion
   62          | expresion ELEM_POSI expresion
   63          | expresion MULTIPLICATIVOS expresion
   64          | expresion POTENCIAS expresion
   65          | expresion IGUALDAD expresion
   66          | expresion RELACION expresion
   67          | expresion OR expresion
   68          | expresion AND expresion
   69          | expresion XOR expresion
   70          | LLAVE_OP_TER expresion INCRE_PRE expresion ELEM_POSI expresion LLAVE_OP_TER
   71          | ID
   72          | CONSTANTE
   73          | agregado_lista

   74 agregado_lista: CORCHIZQ lista_expresiones CORCHDER

   75 tipos: TIPOS
   76      | LISTADE TIPOS


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    PRINCIPAL (258) 2
    LLAVEIZQ (259) 3
    LLAVEDER (260) 3
    COMA (261) 4 6 8 18 19 22 42 44 50
    LISTADE (262) 76
    PROCEDIMIENTO (263) 22 23 24
    PARDER (264) 2 22 23 24 32 40 41 48 49 52
    PARIZQ (265) 2 22 23 24 32 40 41 48 49 52
    CORCHIZQ (266) 74
    CORCHDER (267) 74
    IGUAL (268) 6 7 8 9 17 19 39
    INICIOVAR (269) 11
    FINVAR (270) 11
    SI (271) 40 41
    MIENTRAS (272) 32
    OTROCASO (273) 41
    PARA (274) 33
    HASTA (275) 33
    ITERANDO (276) 33
    HACER (277) 33
    LEER (278) 34
    IMPRIMIR (279) 35
    CADENA (280) 47
    ID (281) 10 16 17 18 19 22 23 24 39 42 43 48 49 71
    PYC (282) 15 34 35 37 38 39 48 49
    TIPOS (283) 75 76
    CONSTANTE (284) 6 7 72
    LLAVE_OP_TER (285) 70
    OR (286) 67
    AND (287) 68
    XOR (288) 69
    IGUALDAD (289) 65
    RELACION (290) 66
    ADITIVOS (291) 57 60
    MULTIPLICATIVOS (292) 63
    POTENCIAS (293) 64
    UNARIOS (294)
    NOT (295) 55
    DECRE_PRE (296) 53 58 61
    INCRE_PRE (297) 54 59 70
    DECRE_POS (298)
    INCRE_POS (299)
    UNARIO_PRE_LISTA (300) 56
    ELEM_POSI (301) 62 70
    MOV_LISTA (302) 37
    DOLLAR (303) 38


No terminales con las reglas donde aparecen

    $accept (49)
        on left: 0
    programa (50)
        on left: 1
        on right: 0
    cabecera_programa (51)
        on left: 2
        on right: 1
    bloque (52)
        on left: 3
        on right: 1 20 29
    lista_parametros (53)
        on left: 4 5
        on right: 4 22 23
    lista_para_por_defecto (54)
        on left: 6 7 8 9
        on right: 6 8 22
    parametro (55)
        on left: 10
        on right: 4 5 6 7 8 9
    declar_de_variables_locales (56)
        on left: 11 12
        on right: 3
    variables_locales (57)
        on left: 13 14
        on right: 11 13
    cuerpo_declar_variables (58)
        on left: 15
        on right: 13 14
    declar_variables (59)
        on left: 16 17 18 19
        on right: 15 18 19
    declar_proced (60)
        on left: 20 21
        on right: 3
    cabecera_proced (61)
        on left: 22 23 24
        on right: 20
    sentencias (62)
        on left: 25 26
        on right: 3
    secu_sentencia (63)
        on left: 27 28
        on right: 25 27
    sentencia (64)
        on left: 29 30 31 32 33 34 35 36 37 38
        on right: 27 28 32 33 40 41
    sentencia_asignacion (65)
        on left: 39
        on right: 30 33
    sentencia_if (66)
        on left: 40 41
        on right: 31
    lista_identificadores (67)
        on left: 42 43
        on right: 34 42
    mensajes (68)
        on left: 44 45
        on right: 35 44
    mensaje (69)
        on left: 46 47
        on right: 44 45
    llamada_proced (70)
        on left: 48 49
        on right: 36
    lista_expresiones (71)
        on left: 50 51
        on right: 48 50 74
    expresion (72)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 17 19 32 33 37 38 39 40 41 46 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    agregado_lista (73)
        on left: 74
        on right: 8 9 73
    tipos (74)
        on left: 75 76
        on right: 10 15


Estado 0

    0 $accept: . programa $end

    PRINCIPAL  desplazar e ir al estado 1

    programa           ir al estado 2
    cabecera_programa  ir al estado 3


Estado 1

    2 cabecera_programa: PRINCIPAL . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 4


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    1 programa: cabecera_programa . bloque

    LLAVEIZQ  desplazar e ir al estado 6

    bloque  ir al estado 7


Estado 4

    2 cabecera_programa: PRINCIPAL PARIZQ . PARDER

    PARDER  desplazar e ir al estado 8


Estado 5

    0 $accept: programa $end .

    $default  aceptar


Estado 6

    3 bloque: LLAVEIZQ . declar_de_variables_locales declar_proced sentencias LLAVEDER

    INICIOVAR  desplazar e ir al estado 9

    $default  reduce usando la regla 12 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 10


Estado 7

    1 programa: cabecera_programa bloque .

    $default  reduce usando la regla 1 (programa)


Estado 8

    2 cabecera_programa: PRINCIPAL PARIZQ PARDER .

    $default  reduce usando la regla 2 (cabecera_programa)


Estado 9

   11 declar_de_variables_locales: INICIOVAR . variables_locales FINVAR

    LISTADE  desplazar e ir al estado 11
    TIPOS    desplazar e ir al estado 12

    variables_locales        ir al estado 13
    cuerpo_declar_variables  ir al estado 14
    tipos                    ir al estado 15


Estado 10

    3 bloque: LLAVEIZQ declar_de_variables_locales . declar_proced sentencias LLAVEDER

    PROCEDIMIENTO  desplazar e ir al estado 16

    $default  reduce usando la regla 21 (declar_proced)

    declar_proced    ir al estado 17
    cabecera_proced  ir al estado 18


Estado 11

   76 tipos: LISTADE . TIPOS

    TIPOS  desplazar e ir al estado 19


Estado 12

   75 tipos: TIPOS .

    $default  reduce usando la regla 75 (tipos)


Estado 13

   11 declar_de_variables_locales: INICIOVAR variables_locales . FINVAR
   13 variables_locales: variables_locales . cuerpo_declar_variables

    LISTADE  desplazar e ir al estado 11
    FINVAR   desplazar e ir al estado 20
    TIPOS    desplazar e ir al estado 12

    cuerpo_declar_variables  ir al estado 21
    tipos                    ir al estado 15


Estado 14

   14 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 14 (variables_locales)


Estado 15

   15 cuerpo_declar_variables: tipos . declar_variables PYC

    ID  desplazar e ir al estado 22

    declar_variables  ir al estado 23


Estado 16

   22 cabecera_proced: PROCEDIMIENTO . ID PARIZQ lista_parametros COMA lista_para_por_defecto PARDER
   23                | PROCEDIMIENTO . ID PARIZQ lista_parametros PARDER
   24                | PROCEDIMIENTO . ID PARIZQ PARDER

    ID  desplazar e ir al estado 24


Estado 17

    3 bloque: LLAVEIZQ declar_de_variables_locales declar_proced . sentencias LLAVEDER

    LLAVEIZQ          desplazar e ir al estado 6
    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    SI                desplazar e ir al estado 27
    MIENTRAS          desplazar e ir al estado 28
    PARA              desplazar e ir al estado 29
    LEER              desplazar e ir al estado 30
    IMPRIMIR          desplazar e ir al estado 31
    ID                desplazar e ir al estado 32
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39
    DOLLAR            desplazar e ir al estado 40

    $default  reduce usando la regla 26 (sentencias)

    bloque                ir al estado 41
    sentencias            ir al estado 42
    secu_sentencia        ir al estado 43
    sentencia             ir al estado 44
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    llamada_proced        ir al estado 47
    expresion             ir al estado 48
    agregado_lista        ir al estado 49


Estado 18

   20 declar_proced: cabecera_proced . bloque

    LLAVEIZQ  desplazar e ir al estado 6

    bloque  ir al estado 50


Estado 19

   76 tipos: LISTADE TIPOS .

    $default  reduce usando la regla 76 (tipos)


Estado 20

   11 declar_de_variables_locales: INICIOVAR variables_locales FINVAR .

    $default  reduce usando la regla 11 (declar_de_variables_locales)


Estado 21

   13 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 13 (variables_locales)


Estado 22

   16 declar_variables: ID .
   17                 | ID . IGUAL expresion

    IGUAL  desplazar e ir al estado 51

    $default  reduce usando la regla 16 (declar_variables)


Estado 23

   15 cuerpo_declar_variables: tipos declar_variables . PYC
   18 declar_variables: declar_variables . COMA ID
   19                 | declar_variables . COMA ID IGUAL expresion

    COMA  desplazar e ir al estado 52
    PYC   desplazar e ir al estado 53


Estado 24

   22 cabecera_proced: PROCEDIMIENTO ID . PARIZQ lista_parametros COMA lista_para_por_defecto PARDER
   23                | PROCEDIMIENTO ID . PARIZQ lista_parametros PARDER
   24                | PROCEDIMIENTO ID . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 54


Estado 25

   52 expresion: PARIZQ . expresion PARDER

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 56
    agregado_lista  ir al estado 49


Estado 26

   74 agregado_lista: CORCHIZQ . lista_expresiones CORCHDER

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    lista_expresiones  ir al estado 57
    expresion          ir al estado 58
    agregado_lista     ir al estado 49


Estado 27

   40 sentencia_if: SI . PARIZQ expresion PARDER sentencia
   41             | SI . PARIZQ expresion PARDER sentencia OTROCASO sentencia

    PARIZQ  desplazar e ir al estado 59


Estado 28

   32 sentencia: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 60


Estado 29

   33 sentencia: PARA . sentencia_asignacion HASTA expresion ITERANDO expresion HACER sentencia

    ID  desplazar e ir al estado 61

    sentencia_asignacion  ir al estado 62


Estado 30

   34 sentencia: LEER . lista_identificadores PYC

    ID  desplazar e ir al estado 63

    lista_identificadores  ir al estado 64


Estado 31

   35 sentencia: IMPRIMIR . mensajes PYC

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    CADENA            desplazar e ir al estado 65
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    mensajes        ir al estado 66
    mensaje         ir al estado 67
    expresion       ir al estado 68
    agregado_lista  ir al estado 49


Estado 32

   39 sentencia_asignacion: ID . IGUAL expresion PYC
   48 llamada_proced: ID . PARIZQ lista_expresiones PARDER PYC
   49               | ID . PARIZQ PARDER PYC
   71 expresion: ID .

    PARIZQ  desplazar e ir al estado 69
    IGUAL   desplazar e ir al estado 70

    $default  reduce usando la regla 71 (expresion)


Estado 33

   72 expresion: CONSTANTE .

    $default  reduce usando la regla 72 (expresion)


Estado 34

   70 expresion: LLAVE_OP_TER . expresion INCRE_PRE expresion ELEM_POSI expresion LLAVE_OP_TER

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 71
    agregado_lista  ir al estado 49


Estado 35

   57 expresion: ADITIVOS . expresion

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 72
    agregado_lista  ir al estado 49


Estado 36

   55 expresion: NOT . expresion

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 73
    agregado_lista  ir al estado 49


Estado 37

   53 expresion: DECRE_PRE . expresion

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 74
    agregado_lista  ir al estado 49


Estado 38

   54 expresion: INCRE_PRE . expresion

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 75
    agregado_lista  ir al estado 49


Estado 39

   56 expresion: UNARIO_PRE_LISTA . expresion

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 76
    agregado_lista  ir al estado 49


Estado 40

   38 sentencia: DOLLAR . expresion PYC

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 77
    agregado_lista  ir al estado 49


Estado 41

   29 sentencia: bloque .

    $default  reduce usando la regla 29 (sentencia)


Estado 42

    3 bloque: LLAVEIZQ declar_de_variables_locales declar_proced sentencias . LLAVEDER

    LLAVEDER  desplazar e ir al estado 78


Estado 43

   25 sentencias: secu_sentencia .
   27 secu_sentencia: secu_sentencia . sentencia

    LLAVEIZQ          desplazar e ir al estado 6
    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    SI                desplazar e ir al estado 27
    MIENTRAS          desplazar e ir al estado 28
    PARA              desplazar e ir al estado 29
    LEER              desplazar e ir al estado 30
    IMPRIMIR          desplazar e ir al estado 31
    ID                desplazar e ir al estado 32
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39
    DOLLAR            desplazar e ir al estado 40

    $default  reduce usando la regla 25 (sentencias)

    bloque                ir al estado 41
    sentencia             ir al estado 79
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    llamada_proced        ir al estado 47
    expresion             ir al estado 48
    agregado_lista        ir al estado 49


Estado 44

   28 secu_sentencia: sentencia .

    $default  reduce usando la regla 28 (secu_sentencia)


Estado 45

   30 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 30 (sentencia)


Estado 46

   31 sentencia: sentencia_if .

    $default  reduce usando la regla 31 (sentencia)


Estado 47

   36 sentencia: llamada_proced .

    $default  reduce usando la regla 36 (sentencia)


Estado 48

   37 sentencia: expresion . MOV_LISTA PYC
   58 expresion: expresion . DECRE_PRE
   59          | expresion . INCRE_PRE
   60          | expresion . ADITIVOS expresion
   61          | expresion . DECRE_PRE expresion
   62          | expresion . ELEM_POSI expresion
   63          | expresion . MULTIPLICATIVOS expresion
   64          | expresion . POTENCIAS expresion
   65          | expresion . IGUALDAD expresion
   66          | expresion . RELACION expresion
   67          | expresion . OR expresion
   68          | expresion . AND expresion
   69          | expresion . XOR expresion

    OR               desplazar e ir al estado 80
    AND              desplazar e ir al estado 81
    XOR              desplazar e ir al estado 82
    IGUALDAD         desplazar e ir al estado 83
    RELACION         desplazar e ir al estado 84
    ADITIVOS         desplazar e ir al estado 85
    MULTIPLICATIVOS  desplazar e ir al estado 86
    POTENCIAS        desplazar e ir al estado 87
    DECRE_PRE        desplazar e ir al estado 88
    INCRE_PRE        desplazar e ir al estado 89
    ELEM_POSI        desplazar e ir al estado 90
    MOV_LISTA        desplazar e ir al estado 91


Estado 49

   73 expresion: agregado_lista .

    $default  reduce usando la regla 73 (expresion)


Estado 50

   20 declar_proced: cabecera_proced bloque .

    $default  reduce usando la regla 20 (declar_proced)


Estado 51

   17 declar_variables: ID IGUAL . expresion

    PARIZQ            desplazar e ir al estado 25
    CORCHIZQ          desplazar e ir al estado 26
    ID                desplazar e ir al estado 55
    CONSTANTE         desplazar e ir al estado 33
    LLAVE_OP_TER      desplazar e ir al estado 34
    ADITIVOS          desplazar e ir al estado 35
    NOT               desplazar e ir al estado 36
    DECRE_PRE         desplazar e ir al estado 37
    INCRE_PRE         desplazar e ir al estado 38
    UNARIO_PRE_LISTA  desplazar e ir al estado 39

    expresion       ir al estado 92
    agregado_lista  ir al estado 49


Estado 52

   18 declar_variables: declar_variables COMA . ID
   19                 | declar_variables COMA . ID IGUAL expresion

    ID  desplazar e ir al estado 93


Estado 53

   15 cuerpo_declar_variables: tipos declar_variables PYC .

    $default  reduce usando la regla 15 (cuerpo_declar_variables)


Estado 54

   22 cabecera_proced: PROCEDIMIENTO ID PARIZQ . lista_parametros COMA lista_para_por_defecto PARDER
   23                | PROCEDIMIENTO ID PARIZQ . lista_parametros PARDER
   24                | PROCEDIMIENTO ID PARIZQ . PARDER

    LISTADE  desplazar e ir al estado 11
    PARDER   desplazar e ir al estado 94
    TIPOS    desplazar e ir al estado 12

    lista_parametros  ir al estado 95
    parametro         ir al estado 96
    tipos             ir al estado 97


Estado 55

   71 expresion: ID .

    $default  reduce usando la regla 71 (expresion)


Estado 56

   52 expresion: PARIZQ expresion . PARDER
   58          | expresion . DECRE_PRE
   59          | expresion . INCRE_PRE
   60          | expresion . ADITIVOS expresion
   61          | expresion . DECRE_PRE expresion
   62          | expresion . ELEM_POSI expresion
   63          | expresion . MULTIPLICATIVOS expresion
   64          | expresion . POTENCIAS expresion
   65          | expresion . IGUALDAD expresion
   66          | expresion . RELACION expresion
   67          | expresion . OR expresion
   68          | expresion . AND expresion
   69          | expresion . XOR expresion

    PARDER           desplazar e ir al estado 98
    OR               desplazar e ir al estado 80
    AND              desplazar e ir al estado 81
    XOR              desplazar e ir al estado 82
    IGUALDAD         desplazar e ir al estado 83
    RELACION         desplazar e ir al estado 84
    ADITIVOS         desplazar e ir al estado 85
    MULTIPLICATIVOS  desplazar e ir al estado 86
    POTENCIAS        desplazar e ir al estado 87
    DECRE_PRE        desplazar e ir al estado 88
    INCRE_PRE        desplazar e ir al estado 89
    ELEM_POSI        desplazar e ir al estado 90


Estado 57

   50 lista_expresiones: lista_expresiones . COMA expresion
   74 agregado_lista: CORCHIZQ lista_expresiones . CORCHDER

    COMA      desplazar e ir al estado 99
    CORCHDER  desplazar e ir al estado 100


Estado 58
